# MotionDetection

./: .clang-format  .clang-tidy  .cmake-format.py  .dockerignore  .gitignore  AppRequestHandlerFactory.cpp  AppRequestHandlerFactory.h  ApplicationSettings.cpp  ApplicationSettings.h  BufferedVideoReader.cpp  BufferedVideoReader.h  CMakeLists.txt  Dockerfile  FixedThreadSafeQueue.h  FrameConsumerThread.cpp  FrameConsumerThread.h  FrameProducerThread.cpp  FrameProducerThread.h  FrameWriterThread.cpp  FrameWriterThread.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  IImageFilter.h  ISmoothingFilter.h  IVideoCapture.h  IdentityFilter.cpp  IdentityFilter.h  ImageFilterChain.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MedianFilter.h  MotionData.h  MotionDataWorker.cpp  MotionDataWorker.h  MotionDetection.ini  MotionDetection.json  Mutex.h  NormalizedBoxFilter.cpp  NormalizedBoxFilter.h  (+37 more)
.github/workflows/: build.yml
front/: index.html
handlers/: CurrentFrameHandler.cpp  CurrentFrameHandler.h  FpsHandler.cpp  FpsHandler.h  HealthyHandler.cpp  HealthyHandler.h  IndexHandler.cpp  IndexHandler.h  NotFoundHandler.cpp  NotFoundHandler.h
handlers/common/: ImencodeHandler.h  OkHandler.cpp
meson/: meson.build
meson/HardenCxxFlags/: meson.build
src/: Api.cpp  Api.hpp  AppRequestHandlerFactory.cpp  AppRequestHandlerFactory.h  AppRequestHandlerFactory.hpp  ApplicationSettings.cpp  ApplicationSettings.hpp  BackgroundSubtractorFactory.cpp  BackgroundSubtractorFactory.hpp  CMakeLists.txt  Config.hpp.in  CvMatRaiiAdapter.hpp  DemuxerOptionsFactory.hpp  ErrorWithContext.hpp  FfmpegInputDeviceFactory.hpp  FileNameFactory.cpp  FileNameFactory.hpp  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GaussianBlurFilter.hpp  IBackgroundSubtractor.hpp  IImageFilter.hpp  IVideoCapture.h  IVideoCapture.hpp  IdentityFilter.cpp  IdentityFilter.hpp  ImageFilterChain.cpp  ImageFilterChain.h  ImageFilterChain.hpp  MedianFilter.cpp  MedianFilter.h  MedianFilter.hpp  MotionData.cpp  MotionData.hpp  MotionDataWorker.cpp  MotionDataWorker.hpp  Mutex.hpp  NormalizedBoxFilter.cpp  NormalizedBoxFilter.hpp  OpencvBackgroundSubtractorFactory.cpp  (+16 more)
src/ffmpeg/: InputDevice.cpp  InputDevice.hpp  ScopedAvDictionary.hpp
src/ffmpeg/detail/: AVRationalOutput.hpp  AvError.hpp  AvFrameAdapters.hpp  AvPacketAdapters.hpp  BaseAvCodecContextProperties.hpp  OutputFile.cpp  OutputFile.hpp  ScopedAvAudioFifo.hpp  ScopedAvFormatInput.hpp  ScopedAvFormatOutput.hpp  ScopedAvSAmplesBuffer.hpp  ScopedDecoderContext.hpp  ScopedEncoderContext.hpp  SwrResampler.hpp  SwsPixelConverter.hpp
src/ffmpeg_adapters/: InputDevice.cpp  InputDevice.hpp  ScopedAvDictionary.hpp  meson.build
src/ffmpeg_adapters/detail/: AvError.hpp  AvFrameAdapters.hpp  AvPacketAdapters.hpp  BaseAvCodecContextProperties.hpp  HardwareHelpers.cpp  HardwareHelpers.hpp  OutputFile.cpp  OutputFile.hpp  ScopedAvAudioFifo.hpp  ScopedAvFormatInput.hpp  ScopedAvFormatOutput.hpp  ScopedAvSAmplesBuffer.hpp  ScopedDecoderContext.hpp  ScopedEncoderContext.hpp  ScopedHwDeviceCtx.hpp  SwrResampler.hpp  SwsPixelConverter.hpp
src/filters/: ConvertToGrayFilter.cpp  ConvertToGrayFilter.hpp  GaussianBlurFilter.cpp  GaussianBlurFilter.hpp  IImageFilter.hpp  IdentityFilter.cpp  IdentityFilter.hpp  ImageFilterChain.cpp  ImageFilterChain.hpp  MedianFilter.cpp  MedianFilter.hpp  NormalizedBoxFilter.cpp  NormalizedBoxFilter.hpp  ResizeFilter.cpp  ResizeFilter.hpp
src/handlers/: CurrentFrameHandler.cpp  CurrentFrameHandler.hpp  FpsHandler.cpp  FpsHandler.hpp  HealthyHandler.cpp  HealthyHandler.hpp  IndexHandler.cpp  IndexHandler.hpp  MotionMaskHandler.cpp  MotionMaskHandler.h  MotionMaskHandler.hpp  NotFoundHandler.cpp  NotFoundHandler.hpp
src/handlers/common/: ContentLengthHandler.cpp  ContentLengthHandler.hpp  ImencodeHandler.cpp  ImencodeHandler.hpp  OkHandler.cpp  OkHandler.h  OkHandler.hpp
src/ini/: meson.build
src/ini/src/: Ini.hpp  Parser.cpp  meson.build
src/ini/tests/: meson.build  parser.cpp
subprojects/: drogon.wrap
subprojects/ini/: meson.build
subprojects/ini/src/: Parser.hpp  meson.build
subprojects/ini/tests/: meson.build
