find_package(OpenCV REQUIRED)
find_package(Poco REQUIRED COMPONENTS Net Foundation Util)
find_package(fmt REQUIRED)
add_executable(
    ${PROJECT_NAME}
    ApplicationSettings.cpp
    ApplicationSettings.hpp
    AppRequestHandlerFactory.cpp
    AppRequestHandlerFactory.hpp
    BackgroundSubtractorFactory.cpp
    BackgroundSubtractorFactory.hpp
    filters/GaussianBlurFilter.cpp
    filters/GaussianBlurFilter.hpp
    filters/IdentityFilter.cpp
    filters/IdentityFilter.hpp
    filters/IImageFilter.hpp
    filters/ImageFilterChain.cpp
    filters/ImageFilterChain.hpp
    filters/MedianFilter.cpp
    filters/MedianFilter.hpp
    filters/NormalizedBoxFilter.cpp
    filters/NormalizedBoxFilter.hpp
    filters/ResizeFilter.cpp
    filters/ResizeFilter.hpp
    handlers/common/ContentLengthHandler.cpp
    handlers/common/ContentLengthHandler.hpp
    handlers/common/ImencodeHandler.cpp
    handlers/common/ImencodeHandler.hpp
    handlers/common/OkHandler.cpp
    handlers/common/OkHandler.hpp
    handlers/CurrentFrameHandler.cpp
    handlers/CurrentFrameHandler.hpp
    handlers/FpsHandler.cpp
    handlers/FpsHandler.hpp
    handlers/HealthyHandler.cpp
    handlers/HealthyHandler.hpp
    handlers/IndexHandler.cpp
    handlers/IndexHandler.hpp
    handlers/MotionMaskHandler.cpp
    handlers/MotionMaskHandler.hpp
    handlers/NotFoundHandler.cpp
    handlers/NotFoundHandler.hpp
    IBackgroundSubtractor.hpp
    IVideoCapture.hpp
    main.cpp
    MotionData.cpp
    MotionData.hpp
    MotionDataWorker.cpp
    MotionDataWorker.hpp
    Mutex.hpp
    OpencvVideoCapture.cpp
    OpencvVideoCapture.hpp
    PreprocessImageFactory.cpp
    PreprocessImageFactory.hpp
    VideoCaptureFactory.cpp
    VideoCaptureFactory.hpp
)
target_link_libraries(
    ${PROJECT_NAME} PUBLIC ${OpenCV_LIBRARIES} ${Poco_LIBRARIES} fmt::fmt
)
